--- a/ILNEditor/ILNEditor.csproj
+++ b/ILNEditor/ILNEditor.csproj
@@ -46,23 +46,41 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ObjectPropertyForm.cs">
+    <Compile Include="Drawing\ILGroupWrapper.cs" />
+    <Compile Include="Drawing\Plotting\ILAxisCollectionWrapper.cs" />
+    <Compile Include="Drawing\ILLabelWrapper.cs" />
+    <Compile Include="Drawing\ILLimitsWrapper.cs" />
+    <Compile Include="Drawing\Plotting\ILLinePlotWrapper.cs" />
+    <Compile Include="Drawing\ILLinesWrapper.cs" />
+    <Compile Include="WrapperMap.cs" />
+    <Compile Include="Drawing\Plotting\ILAxisWrapper.cs" />
+    <Compile Include="Drawing\ILDrawableWrapper.cs" />
+    <Compile Include="Drawing\Plotting\ILMarkerWrapper.cs" />
+    <Compile Include="Drawing\ILNodeWrapper.cs" />
+    <Compile Include="Drawing\Plotting\ILPlotCubeWrapper.cs" />
+    <Compile Include="Drawing\Plotting\ILScaleModesWrapper.cs" />
+    <Compile Include="Drawing\Plotting\ILTickWrapper.cs" />
+    <Compile Include="Drawing\Plotting\ILTickCollectionWrapper.cs" />
+    <Compile Include="EditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ObjectPropertyForm.Designer.cs">
-      <DependentUpon>ObjectPropertyForm.cs</DependentUpon>
+    <Compile Include="EditorForm.Designer.cs">
+      <DependentUpon>EditorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ILPanelEditor.cs" />
+    <Compile Include="TypeConverters\PointFConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeConverters\Vector3Converter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ObjectPropertyForm.resx">
-      <DependentUpon>ObjectPropertyForm.cs</DependentUpon>
+    <EmbeddedResource Include="EditorForm.resx">
+      <DependentUpon>EditorForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
