--- a/Demo/packages.config
+++ b/Demo/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILNumerics.32Bit" version="3.0.0.0" targetFramework="net45" />
+  <package id="ILNumerics" version="3.2.2.0" targetFramework="net40" />
+  <package id="ILNumerics.Native" version="3.2.0" targetFramework="net40" />
 </packages>
