--- a/ILNEditor/ILNEditor.csproj
+++ b/ILNEditor/ILNEditor.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drawing\ILCameraWrapper.cs" />
     <Compile Include="Drawing\ILGroupWrapper.cs" />
     <Compile Include="Drawing\ILScreenObjectWrapper.cs" />
     <Compile Include="Drawing\ILShapeWrapper.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Drawing\ILLinesWrapper.cs" />
     <Compile Include="Drawing\Plotting\ILSurfaceWrapper.cs" />
     <Compile Include="IILPanelEditor.cs" />
+    <Compile Include="TypeExpander\RectangleFExpander.cs" />
     <Compile Include="WrapperMap.cs" />
     <Compile Include="Drawing\Plotting\ILAxisWrapper.cs" />
     <Compile Include="Drawing\ILDrawableWrapper.cs" />
