--- a/ILNEditor/ILNEditor.csproj
+++ b/ILNEditor/ILNEditor.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drawing\ILCameraWrapper.cs" />
@@ -61,6 +62,14 @@
     <Compile Include="Drawing\ILLinesWrapper.cs" />
     <Compile Include="Drawing\Plotting\ILSurfaceWrapper.cs" />
     <Compile Include="IILPanelEditor.cs" />
+    <Compile Include="Serialization\SerializableColor.cs" />
+    <Compile Include="Serialization\SerializableFont.cs" />
+    <Compile Include="Serialization\SerializerWeightAttribute.cs" />
+    <Compile Include="Serialization\XmlDeserializer.cs" />
+    <Compile Include="Serialization\XmlSerializer.cs" />
+    <Compile Include="Serialization\SerializerExtensions.cs" />
+    <Compile Include="Serialization\ISerializer.cs" />
+    <Compile Include="Serialization\SerializerIgnoreAttribute.cs" />
     <Compile Include="TypeExpander\RectangleFExpander.cs" />
     <Compile Include="WrapperMap.cs" />
     <Compile Include="Drawing\Plotting\ILAxisWrapper.cs" />
@@ -85,6 +94,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Editors\ILPanelEditorForm.resx">
       <DependentUpon>ILPanelEditorForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
