--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # Explicit folders (ILN-Editor Project)
 
+# ILNumerics distributables
+ILNumerics.*
+OpenTK.*
+
 # User-specific files
 *.user
 *.chw
 *.bak
 *.suo
+*.GhostDoc.xml
 
 # Intermediates and Binaries
 [Bb]in
@@ -38,9 +43,6 @@
 _ReSharper*
 _dotCover*
 *.dotCover
-
-# NuGet Packages Directory
-packages
 
 # Report and Backup files
 _UpgradeReport_Files/
