--- a/ILNEditor/ILNEditor.csproj
+++ b/ILNEditor/ILNEditor.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ILNEditor</RootNamespace>
     <AssemblyName>ILNEditor</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -38,10 +38,11 @@
   <ItemGroup>
     <Reference Include="ILNumerics, Version=3.3.3.0, Culture=neutral, PublicKeyToken=e00823afcff9a03a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ILNumerics.3.3.3.0\lib\ILNumerics.dll</HintPath>
+      <HintPath>..\packages\ILNumerics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Windows.Forms" />
@@ -72,8 +73,19 @@
     <Compile Include="Drawing\Plotting\ILPlotCubeDataGroupWrapper.cs" />
     <Compile Include="Drawing\Plotting\ILPlotCubeScaleGroupWrapper.cs" />
     <Compile Include="Drawing\Plotting\ILSurfaceWrapper.cs" />
-    <Compile Include="IILPanelEditor.cs" />
+    <Compile Include="Editors\PlotBrowserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Editors\PlotBrowserForm.Designer.cs">
+      <DependentUpon>PlotBrowserForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="IEditorInterfaces.cs" />
     <Compile Include="ILNEditorConfig.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Serialization\DictionaryDeserializer.cs" />
     <Compile Include="Serialization\DictionarySerializer.cs" />
     <Compile Include="Serialization\SerializableColor.cs" />
@@ -96,11 +108,11 @@
     <Compile Include="Drawing\Plotting\ILScaleModesWrapper.cs" />
     <Compile Include="Drawing\Plotting\ILTickWrapper.cs" />
     <Compile Include="Drawing\Plotting\ILTickCollectionWrapper.cs" />
-    <Compile Include="Editors\ILPanelEditorForm.cs">
+    <Compile Include="Editors\PanelEditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Editors\ILPanelEditorForm.Designer.cs">
-      <DependentUpon>ILPanelEditorForm.cs</DependentUpon>
+    <Compile Include="Editors\PanelEditorForm.Designer.cs">
+      <DependentUpon>PanelEditorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ILPanelEditor.cs" />
     <Compile Include="TypeConverters\PointFConverter.cs" />
@@ -108,16 +120,25 @@
     <Compile Include="TypeConverters\Vector3Converter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Editors\ILPanelEditorForm.resx">
-      <DependentUpon>ILPanelEditorForm.cs</DependentUpon>
+    <EmbeddedResource Include="Editors\PanelEditorForm.resx">
+      <DependentUpon>PanelEditorForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Editors\PlotBrowserForm.resx">
+      <DependentUpon>PlotBrowserForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="Resources\collapse-all.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\items.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
