--- a/ILNEditor/ILNEditor.csproj
+++ b/ILNEditor/ILNEditor.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <Version>1.0.1</Version>
-    <Copyright>Copyright © 2017-2020 Thilo Viereck</Copyright>
+    <Version>1.1.0</Version>
+    <Copyright>Copyright © 2017-2021 Thilo Viereck</Copyright>
     <RepositoryUrl>https://github.com/profix898/ILNEditor</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Authors>Thilo Viereck</Authors>
@@ -13,19 +13,10 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="ILNumerics_deploy\ILNHelper.cs" Condition="$(EnableDefaultCompileItems) != 'true'" />
+	<ItemGroup>
+    <PackageReference Include="ILNumerics.Computing" Version="6.0.23-alpha23" />
+    <PackageReference Include="ILNumerics.Core" Version="6.0.23-alpha23" />
+    <PackageReference Include="ILNumerics.Drawing" Version="6.0.23-alpha23" />
+    <PackageReference Include="ILNumerics.Toolboxes.Drawing2" Version="6.0.23-alpha23" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="EMG.External.ILNumerics" Version="5.5.7504" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ILNumerics_deploy\ILNImports1.targets" />
-    <None Include="ILNumerics_deploy\ILNImports2.targets" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="ILNumerics_deploy\ilnumerics.lic" />
-  </ItemGroup>
-  <Import Project="ILNumerics_deploy\ILNImports1.targets" Condition="$(ILNLicCompile) != 'true'" />
-  <Import Project="ILNumerics_deploy\ILNImports2.targets" Condition="$(ILNLicCompile) == 'true'" />
 </Project>
