- task: Upgrade to ILNumerics v6 final (6.0.86)

--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -6,10 +6,9 @@
     <StartupObject>Demo.Program</StartupObject>
   </PropertyGroup>
 	<ItemGroup>
-	  <PackageReference Include="ILNumerics.Computing" Version="6.0.68-beta04" />
-	  <PackageReference Include="ILNumerics.Core" Version="6.0.68-beta04" />
-	  <PackageReference Include="ILNumerics.Drawing" Version="6.0.68-beta04" />
-	  <PackageReference Include="ILNumerics.Drawing.Platforms" Version="6.0.68-beta04" />
+	  <PackageReference Include="ILNumerics.Computing" Version="6.0.86" />
+	  <PackageReference Include="ILNumerics.Drawing" Version="6.0.86" />
+	  <PackageReference Include="ILNumerics.Drawing.Platforms" Version="6.0.86" />
 	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ILNEditor\ILNEditor.csproj" />
